[package]
name = "event_tracker"
version = "0.1.0"
authors = ["Eduardo Santos <eduardo.santos@telenetgroup.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
console = "0.13.0"
futures = "0.3.8"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
thiserror = "1.0.22"
tokio = {version = "0.2", features = ["full"]}
warp = "0.2.5"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
